@@ -1,3 +1,8 @@
+2020-07-27 Sebastian 'basxto' Riedel <sdcc@basxto.de>
+
+	* sdas/linksrc/lkmain.c:
+	  Add -j to help of sdldgb.
+
 2020-07-26 Sebastian 'basxto' Riedel <sdcc@basxto.de>
 
 	* src/SDCCasm.c,
